fix overflow

--- a/src/app/main/resizing/resizing.component.scss
+++ b/src/app/main/resizing/resizing.component.scss
@@ -1,7 +1,10 @@
 .control-section {
     margin:10px;
     width: 100%;
-    position: initial;
+    position: relative;
+    display: flex;
+    flex: 1 1 auto;
+    overflow:auto;
 }
 
 #defaultLayout {
